# Actix-web-simple-e-commerce

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  Readme.md  Shuttle.toml  bacon.toml  docker-compose.dev.yml
.github/workflows/: shuttle_deploy.yml
.sqlx/: query-03ff24bbbc293372aa31eb39a0e1d29c29cc82b09a75b27deb54267dc7f448fe.json  query-063e25faea460bd5a156111eba07d39de1e3e4060f63bab5070ba3ea6203e0a7.json  query-48cba6eee0e3e9e6f2fe1ae7d78e58b4fbfa606e23e0a14ded3469b37e718257.json  query-575ee64fcf9633b0c47bb42749f1d5e4babed6ef7ae3efe56def0b74e83f8c9a.json  query-76dc9d6975d08b8c7eb1eb6aec71356734497bd2bf6da490955c20da10765d39.json  query-8852e1eed0106cc56a8d93613ad0f3a1161e580ba6f4c510c9c53eb1cc84735f.json  query-996cf7ca5676bd3ebf401ffe260a2cc51130ebf397bcde55b7f636bdd13bcb16.json  query-b177590af523a8a4e1b752c72af0383037c5221a302672486d6429056beefc5e.json  query-d5be3dd2b36691807a06488baf50f20047bbd4f266d143e48159dfb1bcb6c24c.json
crates/app/: Cargo.toml
crates/app/src/: config.rs  error.rs  lib.rs  set_up.rs
crates/app/src/handlers/: mod.rs
crates/app/src/handlers/pages/: manage_page.rs  mod.rs
crates/app/src/handlers/service/: auth.rs  bundle.rs  mod.rs  product.rs  user.rs
crates/doc_build/: Cargo.toml  build.rs
crates/libs/db-core/: Cargo.toml
crates/libs/db-core/src/: error.rs  lib.rs  utils.rs
crates/libs/db-core/src/ctx/: mod.rs
crates/libs/db-core/src/models/: bundles.rs  mod.rs  product.rs  user.rs
crates/libs/extension/: Cargo.toml
crates/libs/extension/src/: extractor.rs  lib.rs
crates/libs/extension/src/auth_jwt/: mod.rs  permitted_type.rs  service.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: lib.rs
crates/libs/lib-core/src/template_format/: manage_page.rs  mod.rs
crates/libs/lib-core/templates/: user_action.html
crates/libs/lib-core/templates/admin/: .product_list.html.swp  bundle_list.html  bundle_list.html.j2  empty_table.html  manage_bundles.html  manage_pages.html  manage_pages.html.j2  manage_product.html  product_list.html
crates/libs/middleware/: Cargo.toml
crates/libs/middleware/src/: lib.rs
crates/libs/middleware/src/auth_jwt/: he.rs  mod.rs  service.rs
crates/libs/support-core/: Cargo.toml
crates/libs/support-core/src/: jwt.rs  lib.rs  password_hasher.rs
dev/: cert.pem  key.pem
dev/seed/: main.py  pyproject.toml
doc/: doc.json  index.html
doc-template/: book.toml
docs/: doc.json
migrations/: 20250804094645_user.down.sql  20250804094645_user.up.sql  20250804100557_product.down.sql  20250804100557_product.up.sql  20250805071143_purchase.down.sql  20250805071143_purchase.up.sql
static/: home.html  index.html  login.html  manage.html  modal.js  notFound.html  styles.css  styles.css.map  styles.scss
static/template/: login.html  signup.html  user_action.html
