[workspace]
resolver = "3"
members = [
    # -- Application Libraries
    "crates/libs/support-core",  
    "crates/libs/db-core",
    "crates/libs/middleware",
    "crates/libs/lib-core",
    
    # -- Application Services
    "crates/app"
]
default-members = ["crates/app"]




[workspace.dependencies]
actix-web = { version = "4.11.0", features = []}
actix-session = {version = "0.10.1", features = ["cookie-session"]}
argon2 = {version = "0.5.3"}


serde = {version = "1.0.219"}
serde_json = {version = "1.0.142"}
dotenvy = "0.15.7"

uuid = "1.17.0"

