[package]
name = "app"
version = "0.1.0"
edition = "2024"

[features]
dev_env=[]

[dependencies]
actix-web={workspace = true, features = ["rustls-0_23"]}
actix-session={workspace = true}
actix-files = "0.6.6"

# Serializer
serde={workspace = true}
serde_json={workspace = true}

# Extra Crates
dotenvy = {workspace = true}
derive_more = "2.0.1"
env_logger = "0.11.8"
log = "0.4.27"

# local crates
db-core={path = "../libs/db-core"}
lib-core={path = "../libs/lib-core"}
support-core={path = "../libs/support-core"}
extension={path = "../libs/extension"}


# Cloud Host Service
shuttle-actix-web = "0.56.0"
shuttle-runtime = "0.56.0"
rustls = "0.23.31"
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.6"
