[package]
name = "db-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = {version = "0.8.6", features = ["rust_decimal","postgres", "runtime-tokio", "uuid"]}
dotenvy={workspace = true}
support-core={path = "../support-core"}
uuid={workspace = true, features = ["serde"]}
serde={workspace = true}
serde_json={workspace = true}
chrono = {version = "0.4.41", features = ["serde"]}
rust_decimal = "1.37.2"
actix-web={workspace = true}