[package]
name = "db-core"
version = "0.1.0"
edition = "2024"

[dependencies]
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "decimal"] }
sqlx = { version = "0.8.6", features = [
  "rust_decimal",
  "postgres",
  "runtime-tokio",
  "uuid",
  "chrono",
] }
dotenvy = { workspace = true }
support-core = { path = "../support-core" }
uuid = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = "1.37.2"
actix-web = { workspace = true }
serde_with = "3.14.0"
utoipa-actix-web = "0.1.2"
