[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde={workspace = true}
db-core={path = "../db-core"}
uuid={workspace = true, features = ["serde"]}
argon2 = {version = "0.5.3", features = ["password-hash"]}
support-core={path = "../support-core"}
jsonwebtoken = "9.3.1"
askama = "0.14.0"
serde_json={workspace = true}

[dev-dependencies]
actix-web={workspace = true}
