[package]
name = "support-core"
version = "0.1.0"
edition = "2024"

[features]
default=["argon2"]
argon2=["dep:argon2", "dep:rand_core"]

[dependencies]
actix-web={workspace = true}
argon2 = {version = "0.5.3", features = ["password-hash"], optional = true}
rand_core = {version = "0.9.3", optional = true}
serde = {version = "1.0.219"}
jsonwebtoken = "9.3.1"